Fix cut-pasting of an alpha-inheriting layer

BUG:467811